default/external-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.opensource.zalan.do/teapot/external-dns:v0.7.1
          args:
            - --source=ingress
            - --domain-filter=desertbluffs.com
            - --provider=cloudflare
            - --registry=txt
            - --txt-owner-id=cloistered-education
            - --txt-prefix=nz07-
